# solana-rwa-tokenizer

./: .gitignore  README.md  Задачи - National Solana Hackathon by Decentrathon РУС.docx
app/: package-lock.json  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/portfolio/: page.tsx
app/app/property/[id]/: page.tsx
app/app/tokenize/: page.tsx
app/components/: BuyButton.tsx  WalletButton.tsx  WalletProvider.tsx
app/lib/: mockData.ts  ncalayer.ts  solana.ts
docs/: Solana_RWA_Tokenizer_Pitchdeck_ru.pptx  Solana_RWA_Tokenizer_Pitchdeck_ru_creative.pptx  Solana_RWA_Tokenizer_Pitchdeck_ru_styled.pptx  figma_pitchdeck_insert_pack_ru.md  pitchdeck_ru.md
program/: Anchor.toml  Cargo.toml
program/programs/rwa-tokenizer/: Cargo.toml
program/programs/rwa-tokenizer/src/: lib.rs
program/programs/transfer-hook/: Cargo.toml
program/programs/transfer-hook/src/: lib.rs
program/tests/: rwa-tokenizer.ts
scripts/: package-lock.json  package.json  tsconfig.json
scripts/src/: config.ts  demo.ts  display.ts  investors.ts  marketplace.ts  property.ts  simulator.ts  transferHook.ts  types.ts  wallet.ts  yield.ts
