[package]
name = "rwa-tokenizer"
version = "0.1.0"
description = "RWA Tokenizer — fractional real estate on Solana with ЭЦП НУЦ РК proof-of-asset"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_tokenizer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022", "associated_token"] }
